--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,6 @@
 /* Top Nav Bar */
 
 .Size {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: auto;
+    width: 20%;
     height: auto;
 }
