--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,76 @@
 /* Top Nav Bar */
 
-.Size {
-    width: 20%;
-    height: auto;
+.headerhero{
+    opacity: 1;
+    position: absolute;
+    text-align: center;
+    color: white;
+    font-size: 50px;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.6);
+    color: rgb(255, 255, 255, 1);
+    padding: 20px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+.headerhero{
+    object-fit: cover; 
+    padding-top: 30px;
+}
+
+.cooking{
+    min-height: 100%;
+    display: grid;
+    grid-template-columns: 0.2fr 1fr 1fr 1fr 1fr 0.2fr;
+    grid-template-rows: 1fr;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.castiron{
+grid-column: 2/6;
+grid-row: 1;
+}
+
+.stock{
+grid-column: 3/6;
+grid-row: 1;
+}
+
+.sauce{
+grid-column: 4/6;
+grid-row: 1;
+}
+
+.accessories{
+grid-column: 5/6;
+grid-row: 1;
+}
+
+.potgrid{
+    display: grid;
+    grid-template-columns: repeat(23,3fr);
+    grid-template-rows: repeat(auto,auto);
+    gap: 20px;
+}
+.pot{
+    grid-column: 5/13;
+    grid-row: 1;
+}
+.potsize{
+    height: 100%;
+    width: 100%;
+}
+.potsize2{
+    height: 100%;
+    width: 100%;
+}
+.pot2{
+    grid-column: 13/20;
+    grid-row: 1;
+}
+.collection{
+    grid-column: 2/6;
+    grid-row: 2 auto;
 }
