--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,48 @@
 /* Top Nav Bar */
 
+.textfont{
+    font-weight: 600;
+    font-size: 55px;
+}
+
+.imageGrid{
+    width: 100%;
+    display: grid;
+    grid-template-columns:  repeat(15, 1fr);
+    grid-template-rows: repeat(14, 1fr);
+}
+.hero{
+    background-image: url(/assets/hero.jpg);
+    grid-column: 1 / span 15;
+    grid-row: 1 / span 14;
+    margin: 0%;
+    background-repeat: no-repeat;
+}
+
+.herotextbox{
+    grid-column: 2/ span 3;
+    grid-row: 10;
+}
+.herotext{
+    opacity: 1;
+    position: absolute;
+    text-align: center;
+    color: white;
+    font-size: 50px;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.6);
+    color: rgb(255, 255, 255, 1);;
+    padding: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.gText{
+    grid-row: 14;
+    grid-column: 1/ span 15;
+}
+
 .headerhero{
     opacity: 1;
     position: absolute;
@@ -22,7 +65,7 @@
 .cooking{
     min-height: 100%;
     display: grid;
-    grid-template-columns: 0.2fr 1fr 1fr 1fr 1fr 0.2fr;
+    grid-template-columns: 0.4fr 1fr 1fr 1fr 1fr 0.4fr;
     grid-template-rows: 1fr;
     justify-content: center;
     gap: 1rem;
@@ -49,28 +92,232 @@ grid-row: 1;
 }
 
 .potgrid{
+    min-height: 100%;
     display: grid;
-    grid-template-columns: repeat(23,3fr);
-    grid-template-rows: repeat(auto,auto);
-    gap: 20px;
+    grid-template-columns: 0.4fr 1fr 1fr 1fr 1fr 0.4fr;
+    grid-template-rows: 1fr;
+    justify-content: center;
+    gap: 1rem;
 }
 .pot{
-    grid-column: 5/13;
+    grid-column: 2/6;
     grid-row: 1;
 }
 .potsize{
     height: 100%;
-    width: 100%;
+    width: 50%;
+    object-fit: cover;
 }
 .potsize2{
     height: 100%;
     width: 100%;
+    object-fit: cover;
+
 }
 .pot2{
-    grid-column: 13/20;
+    grid-column: 4/6;
     grid-row: 1;
 }
 .collection{
-    grid-column: 2/6;
+    grid-column: 2/4;
     grid-row: 2 auto;
 }
+
+.wok{
+    grid-column:4/6;
+    grid-row: 2 auto;
+}
+.screenshot{
+    height: 25%;
+    width: 20%;
+}
+.card-holder {
+    width: 70%;
+    height: 100%;
+    padding: 4px;
+    background-color: white;
+    border-radius: 10px;
+    border: 1px solid #000000;
+  }
+
+  .StockPotGrid{
+    display: grid;
+    grid-template-columns:1fr 1fr 1fr 1fr .5fr 1fr 1fr 1fr .5fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: repeat(1, auto);
+}
+.SellerCard{
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 24px;
+}
+.firstSeller{
+    grid-row: 1;
+    grid-column: 2/5 ;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.sellImg{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    object-fit: cover;
+}
+
+.SellerCard{
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 24px;
+}
+.secondSeller{
+    grid-row: 1;
+    grid-column: 6/9;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.thirdSeller{
+    grid-row: 1;
+    grid-column: 10/13;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.bottomgrid{
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: auto 1fr;
+    width: 100%;
+    display: grid;
+}
+
+.leftImage{
+    background-image: url(/assets/Reviews1.jpg);
+    background-size: cover;
+    width: 531px;
+    height: 664.751px;
+    grid-column: 1;
+    grid-row: 2;
+    justify-self: end;
+}
+.leftImageoverlay{
+      opacity: 1;
+      background: rgba(18, 18, 18, 0.6);
+      color: rgb(255, 255, 255, 1);;
+      grid-column: 1;
+      grid-row: 2;
+      border-radius: 10px;
+      padding: 73px 28px;
+      height: 345px;
+      box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
+      margin-left: 3rem;
+      margin-right: 3rem;
+      transform: translateY(50%);
+}
+.centerImage{
+    background-image: url(/assets/Reviews2.jpg);
+    background-size: cover;
+    width: 531px;
+    height: 664.751px;
+    grid-column: 2;
+    grid-row: 2;
+    justify-self: center;
+    margin: 0;
+    border-radius: 15px;
+}
+.centerImageoverlay{
+    opacity: 1;
+    background: rgba(18, 18, 18, 0.6);
+    color: rgb(255, 255, 255, 1);
+    grid-column: 1;
+    grid-row: 2;
+    border-radius: 10px;
+    padding: 73px 28px;
+    height: 345px;
+    box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
+    margin-left: 3rem;
+    margin-right: 3rem;
+    transform: translateY(50%);
+}
+.rightImage{
+    background-image: url(/assets/Reviews3.jpg);
+    background-size: cover;
+    width: 531px;
+    height: 664.751px;
+    grid-column: 3;
+    grid-row: 2;
+    justify-self: center;
+    margin: 0;
+    border-radius: 15px;
+}
+.rightImageoverlay{
+    opacity: 1;
+    background: rgba(18, 18, 18, 0.6);
+    color: rgb(255, 255, 255, 1);
+    grid-column: 3;
+    grid-row: 2;
+    border-radius: 10px;
+    padding: 73px 28px;
+    height: 345px;
+    box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
+    margin-left: 3rem;
+    margin-right: 3rem;
+    transform: translateY(50%);
+}
+
+
+.navt{
+    font-size: 10px;
+    font-size: 20px;
+    color: #292828;
+    font-weight: 300;
+
+}
+.navsale{
+    color: #982A1C;
+    font-size: 10px;
+    font-size: 20px;
+}
+.logo{
+    height: 25%;
+    width: 25%;
+    margin-left: 20%;
+}
+.navcenter{
+    margin-left: 100%;
+}
+.navtall{
+    height: 30%;
+}
+
+.navbar {
+    text-align: center; 
+  }
+  .navbar-nav {
+    justify-content: center; 
+    width: 80%; 
+  }
+
+
+@media screen and (max-width:1024px){
+    .headerhero{
+        opacity: 1;
+        position: absolute;
+        text-align: center;
+        color: white;
+        font-size: 50px;
+        justify-content: center;
+        align-items: center;
+        background: rgba(0, 0, 0, 0.6);
+        color: rgb(255, 255, 255, 1);
+        padding: 20px;
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+    .headerhero{
+        object-fit: cover; 
+        padding-top: 30px;
+    }
+}
+
+
